--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,10 @@
 }
 
 @layer base {
+  :root {
+    --cell-font-size: 16px;
+  }
+
   body {
     background-color: rgb(var(--bg));
     color: rgb(var(--fg));
